# nanodiff

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  nanodiff.cpp  nanodiff.h
.zed/: settings.json  tasks.json
test/: CMakeLists.txt  nanodiff-test.cpp
test/resources/: testcase_completely_different-actual.txt  testcase_line_added-actual.txt  testcase_one_line_changed-actual.txt
